RESOLVED FIXED299728
REGRESSION (Safari 26): Missing paint invalidation of area previously covered by a repositioned element
https://bugs.webkit.org/show_bug.cgi?id=299728
Summary REGRESSION (Safari 26): Missing paint invalidation of area previously covered...
Jonas Walldén
Reported 2025-09-29 05:01:27 PDT
Created attachment 476890 [details] Test case The attached test case creates a ruler and tracks the mouse to render a measurement value on top of the ruler. When mousing around in the window I see remnants of earlier placements still on screen. This is a regression from before version 26, and I've reproduced it in two different macOS installations: Safari 21622.1.22.11.14 running on macOS 26.0 (25A354), and Safari 20622.1.22.118.4 running on macOS 15.7 (24G222). It's also present in Safari Technology Preview r228. I've noticed three workarounds which are included in the test case as `body.workaround1`, `body.workaround2` and `body.workaround3`. They include switching from fixed to absolute positioning, disabling overflow and not setting a z-index.
Attachments
Test case (2.23 KB, text/html)
2025-09-29 05:01 PDT, Jonas Walldén
no flags
Screenshot from Safari 26.0.1 on macOS 15.7 (16.94 KB, image/jpeg)
2025-09-29 05:02 PDT, Jonas Walldén
no flags
Test reduction (466 bytes, text/html)
2025-10-14 10:27 PDT, alan
no flags
Patch (6.15 KB, patch)
2025-10-14 18:50 PDT, alan
no flags
[fast-cq]Patch (6.22 KB, patch)
2025-10-15 15:28 PDT, alan
no flags
Jonas Walldén
Comment 1 2025-09-29 05:02:36 PDT
Created attachment 476891 [details] Screenshot from Safari 26.0.1 on macOS 15.7
Jonas Walldén
Comment 2 2025-09-29 05:03:22 PDT
*** Bug 299727 has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 3 2025-09-29 08:09:31 PDT
alan
Comment 4 2025-10-14 10:00:50 PDT
I am able to reproduce this repaint issue all the way back to May of 2024 (279284@main -the oldest build I have locally).
alan
Comment 5 2025-10-14 10:27:46 PDT
Created attachment 477073 [details] Test reduction
alan
Comment 6 2025-10-14 18:50:54 PDT
alan
Comment 7 2025-10-15 15:28:23 PDT
Created attachment 477093 [details] [fast-cq]Patch
EWS
Comment 8 2025-10-16 05:30:21 PDT
Committed 301625@main (1ea46dc05aa6): <https://commits.webkit.org/301625@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477093 [details].
Note You need to log in before you can comment on or make changes to this bug.