REGRESSION (Safari 26): Missing paint invalidation of area previously covered by a repositioned element https://bugs.webkit.org/show_bug.cgi?id=299728 <rdar://problem/161570899>

Reviewed by Simon Fraser.

This change ensures that when the parent layer
- has full-repaint bit set
- but does necessarily enclose this 'destroyRoot' renderer (out-of-flow box does not contribute to the size of the parent layer)
we still manage to invalidate the area by issuing a forced repaint.

* LayoutTests/fast/repaint/missing-out-of-flow-repaint-on-destroy-expected.html: Added.
* LayoutTests/fast/repaint/missing-out-of-flow-repaint-on-destroy.html: Added.
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::containerForRepaint const):
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::repaintAndMarkContainingBlockDirtyBeforeTearDown):

Canonical link: https://commits.webkit.org/301625@main